Fixed alignment with buttons

--- a/index.css
+++ b/index.css
@@ -6,4 +6,6 @@ body {
 .clicker-container {
     display: flex;
     justify-content: center;
+    width: 100vw;
+    height: 100vh;
 }
